# scrible

src/: HashTable  MakeNoYacc  MakeTEST  Makefile.am  Makefile.in  Parser  basic_thread_ex.cpp  check.1  check.2  classIO.cpp  classIO.cpp.back  classIO.h  classMySig.h  classMySig.h.back  classMybitset.h  classMybitsetChar.h  classMybitsetX.h  classMybitsetXBac.h  combined.cpp  conf.h  const.h  constEigen.h  corr  corr1  corr2  corr3  corrB  corrF  corrFF  correctionV1.cpp  correctionV2.cpp  ex  freqs.txt  general.h  generatePrimes.cpp  genprime  getline  getline.cpp  gmon.out  hashChaining.cpp  (+39 more)
src/.svn/: all-wcprops  entries
src/.svn/text-base/: Esecuzione.svn-base  MakeNoYacc.svn-base  MakeYacc.svn-base  ReformatForDeconvolution.pl.svn-base  classIO.cpp.svn-base  classIO.h.svn-base  classIOold.cpp.svn-base  classMybitset.h.svn-base  classMybitsetChar.h.svn-base  conf.h.svn-base  (+12 more)
src/oldCorrections/: correction.cpp  correction.h  correction.h.bb  correction.h.gianfranco  correction.h.iddfs  correction.h.iddfs.old  correction1.cpp  correction10.h  correction11.h  correction2.cpp  correction3.cpp  correction4.cpp  correction5.cpp  correction6.cpp  correction8.cpp  correction9.cpp  correctionBest.cpp  correctionFinal.cpp  correctionFinalBack1.cpp  correctionFinalBack2.cpp  correctionFinalBack3.cpp  correctionFinalBack4.cpp  correctionFinalBack5.cpp  correctionFinalBack6.cpp  correctionThread.cpp  correctionThread.cpp.back  correctionThreadNoCache.cpp
src/reduced_hash/: hashfilter.out.full.4  hashfilter.out.full.5  hashfilter.out.reduced.4  hashfilter.out.reduced.5
